--- a/style.css
+++ b/style.css
@@ -22,14 +22,13 @@ body {
   font-weight: normal;
   color: var(--main-color);
   background-color: var(--bg-color);
-  width: 100vw;
-  margin: 0;
-  display:flex;
-  justify-content: center;
+  width: calc(100vw - 80px);
+  margin: auto;
+  /* display: flex;
+  justify-content: center; */
 }
 
 .centeredBody {
-  width: calc(100vw - 80px) !important;
 }
 
 .closed {
