--- a/style.css
+++ b/style.css
@@ -489,7 +489,7 @@ li {
 
 @media screen and (max-width: 1000px) {
 
-  #nav {
+  #nav a:not(#languageButton){
     display: none;
   }
   
@@ -572,7 +572,7 @@ li {
 
   #homeHeadline {
     grid-column: 1 / span 7;
-    margin-top: 10px;
+    margin-top: 50px;
   }
   #homeTextOne {
     grid-column: 3 / span 5;
